# mcp_server

./: .gitignore  AGENTS.md  CHATGPT_INSTRUCTION.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: auto-deploy.yml  autosignal.yml  ci.yml  update-check.yml
config/: .env.template  nginx.conf  settings.yaml
docs/: CHATGPT_INTEGRATION.md
scripts/: deploy.sh  github-setup.sh  mcp-brokerd.service  mcp-server.service  mcp-task-orchestrator.service  setup-experimental-vps.sh  smoke-test.sh
src/: __init__.py
src/mcp_server/: __init__.py  main.py
src/mcp_server/api/: routes.py  sse_transport.py
src/mcp_server/auth/: __init__.py  middleware.py  oauth.py
src/mcp_server/core/: broker_client.py  broker_daemon.py  settings.py  task_orchestrator.py
src/mcp_server/tools/: __init__.py  action_router_tools.py  agent_zero_handoff_tools.py  anti_loop_tools.py  batch_executor_tools.py  bootstrap_tools.py  cache_tools.py  capability_tools.py  direct_ops_tools.py  executor.py  extra_tools.py  github_tools.py  mcp_tools.py  mcp_tools.py.bak_single_router  obfuscated_mutation_tools.py  obfuscated_tools.py  ops_tools.py  orchestrator_tools.py  playbook_tools.py  remote_ssh_tools.py  repo_tools.py  router_tools.py  safe_edit_tools.py  safe_file_tools.py  safe_query_tools.py  server_admin_tools.py  session_tools.py  single_router_tool.py  smart_tools.py  ssh_client.py  state_tools.py  unified_whitelist_tools.py  whitelist_admin_tools.py  (+1 more)
tests/: test_executor_timeout.py  test_http_health.py  test_mcp_auth.py  test_mcp_discovery.py
